- Added CFileHelper::getMimeType and CFileHelper::getMimeTypeByExtension (Qiang)
- Added COutputCache::varyByRoute (Qiang)
- Added 'params' to HTML options that are used in CHtml methods (Qiang)
- Added CDbConnection::emulatePrepare (Qiang)
- Added CWebApplication::clientScript and removed CController::clientScript (Qiang)
- Added roles support to CAccessControlFilter (Qiang)
- Refactored UserIdentity generated by yiic webapp (Qiang)
- Refactored CLinkPager (Qiang)
- Refactored CFilter (Qiang)
- Removed CClientScript::registerBodyScript and CClientScript::registerBodyScriptFile;
  Added a position parameter to CClientScript::registerScript and CClientScript::registerScriptFile (Qiang)
- Changed CModel::validate() to allow validating specified attributes (Qiang)
- Changed CActiveRecord::save() to allow saving specific attributes (Qiang)
- Fixed a bug in CNumberValidator about checking upper limit (Qiang)
- Fixed a bug in CHtml::dropDownList() which doesn't render the 'name' attribute (Qiang)
- Fixed a bug when MySQL tables are using mixed-case letters in their names, relational
  active record fails to work as expected. (Qiang)
- Fixed a bug in CDateFormatter::formatDateTime that causes the method to return null (Qiang)
- Fixed issue #35: CTreeView's getClientOptions() don't works (Qiang)

Version 1.0rc November 10, 2008
-------------------------------
- Fixed issue #18: renderPartial should enable output caching to avoid session start issue (Qiang)
- Added $source parameter to YiiBase::t() (Qiang)
- Added CGettextMessageSource (Qiang)
- Added CHttpCookie.httpOnly property (Qiang)
- Changed CHtml::activeLabel so that it won't encode the label (Qiang)
- Fixed ticket #19: CHtml::activeCheckBox does not work as expected when unchecked (Qiang)
- Added CHtml::checkBoxList(), CHtml::radioButtonList() (Qiang)
- Added CHtml::activeCheckBoxList() and CHtml::activeRadioButtonList() (Qiang)
- Added support for persistent page state (Qiang)